--- a/index.html
+++ b/index.html
@@ -1,10 +1,107 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8" />
   <title>Trend King</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- مكتبة الأيقونات -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Tahoma', sans-serif;
+      background: linear-gradient(to bottom right, #1e1e2f, #2c3e50);
+      color: #fff;
+      text-align: center;
+    }
+    h1 {
+      margin-top: 40px;
+      font-size: 2.5rem;
+      color: #f1c40f;
+    }
+    .logo-container {
+      margin-top: 30px;
+    }
+    .logo-container img {
+      max-width: 300px;
+      height: auto;
+      border-radius: 15px;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.4);
+    }
+    .contact-btn {
+      margin-top: 40px;
+      padding: 15px 30px;
+      font-size: 1.3rem;
+      background: #f39c12;
+      color: #fff;
+      border: none;
+      border-radius: 30px;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+    .contact-btn:hover {
+      background: #d35400;
+      transform: scale(1.05);
+    }
+    .popup {
+      display: none;
+      position: fixed;
+      bottom: 80px;
+      right: 20px;
+      background: rgba(0,0,0,0.9);
+      padding: 20px;
+      border-radius: 10px;
+      text-align: center;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.5);
+    }
+    .popup a {
+      display: block;
+      margin: 10px 0;
+      padding: 10px;
+      border-radius: 30px;
+      color: #fff;
+      text-decoration: none;
+      transition: 0.3s;
+      font-size: 1.2rem;
+    }
+    .tiktok { background: #000; }
+    .whatsapp { background: #25D366; }
+    .telegram { background: #0088cc; }
+    .popup a:hover {
+      opacity: 0.8;
+      transform: scale(1.05);
+    }
+  </style>
 </head>
 <body>
   <h1>مرحباً بك في موقع Trend King</h1>
+
+  <div class="logo-container">
+    <img src="images/TREND KING.jpg" alt="Trend King Logo">
+  </div>
+
+  <!-- زر تواصل -->
+  <button class="contact-btn" onclick="togglePopup()">تواصل معنا</button>
+
+  <!-- نافذة الروابط -->
+  <div class="popup" id="popup">
+    <a href="https://www.tiktok.com/@trendking07" target="_blank" class="tiktok">
+      <i class="fab fa-tiktok"></i> TikTok
+    </a>
+    <a href="https://wa.me/201064680034" target="_blank" class="whatsapp">
+      <i class="fab fa-whatsapp"></i> WhatsApp
+    </a>
+    <a href="https://t.me/TRENDKING07" target="_blank" class="telegram">
+      <i class="fab fa-telegram"></i> Telegram
+    </a>
+  </div>
+
+  <script>
+    function togglePopup() {
+      const popup = document.getElementById('popup');
+      popup.style.display = popup.style.display === 'block' ? 'none' : 'block';
+    }
+  </script>
 </body>
 </html>
