--- a/index.html
+++ b/index.html
@@ -2,105 +2,147 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="utf-8" />
-  <title>Trend King</title>
+  <title>TREND KING</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <!-- مكتبة الأيقونات -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: 'Tahoma', sans-serif;
-      background: linear-gradient(to bottom right, #1e1e2f, #2c3e50);
-      color: #fff;
-      text-align: center;
+    :root{
+      --bg1:#1e1e2f; --bg2:#2c3e50;
+      --text:#eaeef3; --muted:#c7d1db;
+      --accent:#f1c40f; --cta:#f39c12; --cta2:#d35400;
+      --card:#0e1726; --card2:#142238; --border:#23344a;
+      --good:#34d399; --warn:#f59e0b;
     }
-    h1 {
-      margin-top: 40px;
-      font-size: 2.5rem;
-      color: #f1c40f;
+    *{box-sizing:border-box}
+    body{
+      margin:0; font-family:"Tajawal","Segoe UI",system-ui,Arial,sans-serif;
+      background:linear-gradient(180deg,var(--bg1),var(--bg2));
+      color:var(--text); text-align:center;
     }
-    .logo-container {
-      margin-top: 30px;
+    h1{margin:38px 12px 10px; font-size:clamp(28px,4.5vw,44px); color:var(--accent); line-height:1.2;}
+    .brand{ text-transform:uppercase; letter-spacing:.5px; }
+    .wrap{max-width:1050px; margin:auto; padding:20px}
+    .logo{max-width:280px; width:100%; height:auto; border-radius:14px; box-shadow:0 10px 30px rgba(0,0,0,.4)}
+    .card{
+      background:linear-gradient(180deg,var(--card),var(--card2));
+      border:1px solid var(--border); border-radius:18px; padding:22px;
+      text-align:initial; margin-top:22px; box-shadow:0 12px 30px rgba(0,0,0,.25)
     }
-    .logo-container img {
-      max-width: 300px;
-      height: auto;
-      border-radius: 15px;
-      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.4);
+    .lead{color:var(--muted); font-size:clamp(16px,2.2vw,18px); text-align:center}
+    .btn{margin-top:20px; padding:14px 28px; font-size:1.1rem; border-radius:28px;
+      background:var(--cta); color:#fff; border:none; cursor:pointer}
+    .btn:hover{background:var(--cta2); transform:translateY(-1px)}
+    .popup{display:none; position:fixed; bottom:80px; right:20px; background:rgba(0,0,0,.9);
+      padding:18px; border-radius:12px; width:min(92vw,280px); text-align:center; z-index:50}
+    .popup a{display:block; margin:10px 0; padding:10px; border-radius:30px; color:#fff; text-decoration:none; font-weight:600}
+    .tiktok{background:#000} .whatsapp{background:#25D366} .telegram{background:#0088cc}
+    .kpi{display:flex; gap:10px; flex-wrap:wrap; margin:12px 0}
+    .pill{border:1px dashed #355079; padding:6px 10px; border-radius:12px; color:#cbd5e1; font-size:.95rem}
+    .grid{display:grid; gap:16px} @media(min-width:840px){ .grid{grid-template-columns:1fr 1fr} }
+    h2{margin:0 0 12px; color:#ffd166; font-size:clamp(20px,2.6vw,26px)}
+    ul{margin:0; padding-inline-start:1.1rem}
+    li{margin:.35rem 0}
+    .callout{border-inline-start:4px solid var(--warn); background:#1b1405; border-radius:10px; padding:12px 14px; margin-top:10px}
+    pre{
+      background:#0a1422; border:1px solid var(--border); border-radius:12px; padding:14px;
+      overflow:auto; color:#d1e7ff; direction:ltr; text-align:left
     }
-    .contact-btn {
-      margin-top: 40px;
-      padding: 15px 30px;
-      font-size: 1.3rem;
-      background: #f39c12;
-      color: #fff;
-      border: none;
-      border-radius: 30px;
-      cursor: pointer;
-      transition: 0.3s;
-    }
-    .contact-btn:hover {
-      background: #d35400;
-      transform: scale(1.05);
-    }
-    .popup {
-      display: none;
-      position: fixed;
-      bottom: 80px;
-      right: 20px;
-      background: rgba(0,0,0,0.9);
-      padding: 20px;
-      border-radius: 10px;
-      text-align: center;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.5);
-    }
-    .popup a {
-      display: block;
-      margin: 10px 0;
-      padding: 10px;
-      border-radius: 30px;
-      color: #fff;
-      text-decoration: none;
-      transition: 0.3s;
-      font-size: 1.2rem;
-    }
-    .tiktok { background: #000; }
-    .whatsapp { background: #25D366; }
-    .telegram { background: #0088cc; }
-    .popup a:hover {
-      opacity: 0.8;
-      transform: scale(1.05);
-    }
+    .calc{background:#0d1a2b; border:1px solid var(--border); border-radius:12px; padding:14px}
+    footer{margin:26px 0 16px; color:#99a7b6; font-size:13px}
   </style>
 </head>
 <body>
-  <h1>مرحباً بك في موقع Trend King</h1>
+  <div class="wrap">
+    <!-- العنوان + اللوجو -->
+    <h1>مرحبًا بك في موقع <span class="brand">TREND KING</span></h1>
+    <img class="logo" src="images/TREND KING.jpg" alt="TREND KING Logo">
+    <p class="lead">انطلاقة احترافية مع نظام تداول منضبط—عوائد مستهدفة 30%–40% ومخاطرة لا تتجاوز 10%.</p>
 
-  <div class="logo-container">
-    <img src="images/TREND KING.jpg" alt="Trend King Logo">
-  </div>
+    <!-- زر تواصل -->
+    <button class="btn" onclick="togglePopup()">تواصل معنا</button>
+    <div class="popup" id="popup">
+      <a class="tiktok"   target="_blank" href="https://www.tiktok.com/@trendking07"><i class="fab fa-tiktok"></i> TikTok</a>
+      <a class="whatsapp" target="_blank" href="https://wa.me/201064680034"><i class="fab fa-whatsapp"></i> WhatsApp</a>
+      <a class="telegram" target="_blank" href="https://t.me/TRENDKING07"><i class="fab fa-telegram"></i> Telegram</a>
+    </div>
 
-  <!-- زر تواصل -->
-  <button class="contact-btn" onclick="togglePopup()">تواصل معنا</button>
+    <!-- المحتوى الاحترافي (المربع المحدد) -->
+    <section class="card">
+      <h2>🚀 بسم الله نبدأ، وعلى الله توكلنا</h2>
+      <p>رحلة استثمارية شهرية تهدف إلى تحقيق دخل شهري يتراوح بين <b>30% – 40%</b>، مع التزام كامل بنسبة مخاطرة لا تتجاوز <b>10%</b> فقط من قيمة المحفظة — وهي نسبة منخفضة جدًا، ولن تشعر بها إلا في حالات الانعكاسات الكبيرة، حيث يتم تصفية مراكز من يدخلون السوق بلا خطة أو وعي 😉</p>
 
-  <!-- نافذة الروابط -->
-  <div class="popup" id="popup">
-    <a href="https://www.tiktok.com/@trendking07" target="_blank" class="tiktok">
-      <i class="fab fa-tiktok"></i> TikTok
-    </a>
-    <a href="https://wa.me/201064680034" target="_blank" class="whatsapp">
-      <i class="fab fa-whatsapp"></i> WhatsApp
-    </a>
-    <a href="https://t.me/TRENDKING07" target="_blank" class="telegram">
-      <i class="fab fa-telegram"></i> Telegram
-    </a>
+      <div class="kpi">
+        <span class="pill">انضباط عالي</span>
+        <span class="pill">إدارة مخاطر ذكية</span>
+        <span class="pill">تطبيق موحد على كل المحافظ</span>
+      </div>
+
+      <div class="grid">
+        <article class="card">
+          <h2>💡 فكرة الاستثمار</h2>
+          <ul>
+            <li>العمل بنظام تداول <b>منضبط ومدروس</b>.</li>
+            <li>أرباح شهرية مجزية مع <b>تحكم كامل بالمخاطر</b>.</li>
+            <li>نفس الأداء يُطبّق على جميع المحافظ، مع اختلاف <b>حجم اللوت</b> حسب رأس المال.</li>
+          </ul>
+          <div class="callout">
+            <b>📌 ملحوظة هامة:</b><br>
+            أقل محفظة للبدء الفعلي: <b>2000 دولار</b>.<br>
+            محفظة <b>100 دولار</b>: للمتابعة والمشاهدة فقط بهدف اختبار الأداء دون مخاطرة حقيقية.
+          </div>
+        </article>
+
+        <article class="card">
+          <h2>📊 بيانات حساب المشاهدة (سِنت أمريكي)</h2>
+          <p class="muted">يمكنك إرفاق لقطة شاشة لمنصة MT5 هنا بدل الصورة الافتراضية.</p>
+          <img class="logo" src="https://via.placeholder.com/700x360?text=MT5+Watch+Account" alt="MT5 Watch">
+          <pre>
+Account Number: 157276506
+Password:       You@1212
+Server:         Exness-MT5Real19
+          </pre>
+        </article>
+      </div>
+
+      <article class="card">
+        <h2>❓ لماذا حساب 100 دولار مهم؟</h2>
+        <ul>
+          <li>لا تحتاج للمتابعة اليومية المرهِقة—عِش حياتك وركّز في عملك، ودع الحساب يعمل.</li>
+          <li>بنهاية الشهر، ستجد مبلغًا محترمًا يمكنك الاستفادة منه والشعور ببركته بإذن الله.</li>
+        </ul>
+        <img class="logo" src="https://via.placeholder.com/900x340?text=Work+from+anywhere" alt="Work anywhere">
+      </article>
+
+      <article class="card">
+        <h2>📈 كيف أحسب دخلي إذا بدأت بـ 1000 دولار؟</h2>
+        <p>الأمر بسيط جدًا: تابع أرباح حساب المشاهدة، واضرب الربح في نسبة الفرق بين المحفظتين.</p>
+        <div class="calc">
+          <b>🔹 مثال:</b><br>
+          لو حساب الـ100 دولار ربح <b>3$</b> في يوم معيّن، فإن محفظة الـ1000 دولار ستحقق تقريبًا <b>30$</b>.<br>
+          <b>المعادلة:</b> <span style="color:#7dd3fc">1000 ÷ 100 × 3 = 30</span><br>
+          نفس النظام، نفس الأداء، والفرق فقط في <b>حجم اللوت</b>.
+        </div>
+        <img class="logo" src="https://via.placeholder.com/900x360?text=Infographic:+Scaling+Profit" alt="Infographic">
+      </article>
+
+      <article class="card" style="text-align:center">
+        <h2>📞 للتواصل والاشتراك</h2>
+        <p><b>واتساب:</b> <a href="https://wa.me/201064680034" target="_blank" style="color:#7ee787; text-decoration:none">00201064680034</a></p>
+        <div class="kpi" style="justify-content:center">
+          <a class="whatsapp" style="padding:10px 16px;border-radius:24px" target="_blank" href="https://wa.me/201064680034"><i class="fab fa-whatsapp"></i> تواصل واتساب</a>
+          <a class="telegram" style="padding:10px 16px;border-radius:24px" target="_blank" href="https://t.me/TRENDKING07"><i class="fab fa-telegram"></i> تيليجرام</a>
+          <a class="tiktok" style="padding:10px 16px;border-radius:24px" target="_blank" href="https://www.tiktok.com/@trendking07"><i class="fab fa-tiktok"></i> تيك توك</a>
+        </div>
+      </article>
+    </section>
+
+    <footer>© 2025 — <span class="brand">TREND KING</span> • إدارة مخاطر منضبطة • عوائد مستهدفة 30%–40%</footer>
   </div>
 
   <script>
-    function togglePopup() {
-      const popup = document.getElementById('popup');
-      popup.style.display = popup.style.display === 'block' ? 'none' : 'block';
+    function togglePopup(){
+      const el=document.getElementById('popup');
+      el.style.display = (el.style.display==='block') ? 'none' : 'block';
     }
   </script>
 </body>
