--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
     }
     *{box-sizing:border-box}
     body{margin:0;background:linear-gradient(180deg,var(--bg1),var(--bg2));color:var(--text);font-family:"Tajawal","Segoe UI",system-ui,Arial,sans-serif}
+    a{color:#9bd1ff}
     .wrap{max-width:1050px;margin:auto;padding:22px}
     .title{margin:34px 12px 10px;font-size:clamp(28px,4.6vw,44px);color:var(--accent);text-align:center}
-    .brand{ text-transform:uppercase; letter-spacing:.6px }
+    .brand{text-transform:uppercase;letter-spacing:.6px}
     .logo{display:block;margin:10px auto 10px;max-width:280px;width:100%;height:auto;border-radius:14px;box-shadow:0 10px 30px rgba(0,0,0,.4)}
     .intro-text{font-size:1.6rem;font-weight:700;color:#ffcc00;text-align:center;margin:8px 0 6px;text-shadow:1px 1px 3px rgba(0,0,0,.4)}
     .btn{display:inline-block;margin:16px auto 6px;padding:14px 26px;border-radius:28px;background:var(--cta);color:#fff;font-weight:700;border:none;cursor:pointer}
@@ -31,11 +32,14 @@
     ul{margin:0;padding-inline-start:1.1rem}
     li{margin:.35rem 0}
     .callout{border-inline-start:4px solid var(--warn);background:#1b1405;border-radius:10px;padding:12px 14px;margin-top:10px}
+
     pre{background:#0a1422;border:1px solid var(--border);border-radius:12px;padding:14px;color:#d1e7ff;direction:ltr;text-align:left;overflow:auto}
     .watch-link{display:inline-flex;align-items:center;gap:8px;background:#0b1626;border:1px solid var(--border);padding:6px 10px;border-radius:10px;color:#9bd1ff;text-decoration:none;font-weight:700}
     .watch-link img{width:22px;height:22px;border-radius:4px;vertical-align:middle}
-    .divider-img{display:block;margin:20px auto;max-width:95%;border-radius:12px;box-shadow:0 4px 12px rgba(0,0,0,.45)}
-    .section-title{color:#FFD700;font-size:24px;text-align:center;margin:0 0 10px}
+
+    .section-title{color:#FFD700;font-size:24px;text-align:center;margin:14px 0 10px}
+    .divider-img{display:block;margin:6px auto 20px;max-width:95%;border-radius:12px;box-shadow:0 4px 12px rgba(0,0,0,.45)}
+
     footer{margin:26px 0 16px;color:#99a7b6;font-size:13px;text-align:center}
   </style>
 </head>
@@ -44,7 +48,7 @@
     <!-- HERO -->
     <h1 class="title">مرحبًا بك في موقع <span class="brand">TREND KING</span></h1>
     <img class="logo" src="images/TREND KING.jpg" alt="TREND KING Logo">
-    <p class="intro-text">انطلاقة احترافية مع نظام تداول منضبط — عوائد مستهدفة من 30% إلى 40% شهرياً ومخاطرة لا تتجاوز 10%.</p>
+    <p class="intro-text">انطلاقة احترافية مع نظام تداول منضبط — عوائد مستهدفة من 30% إلى 40% شهريًا ومخاطرة لا تتجاوز 10%.</p>
 
     <!-- تواصل -->
     <button class="btn" onclick="togglePopup()">تواصل معنا</button>
@@ -54,28 +58,41 @@
       <a class="telegram" target="_blank" href="https://t.me/TRENDKING07"><i class="fab fa-telegram"></i> Telegram</a>
     </div>
 
+    <!-- فكرة الاستثمار (قبل لماذا تكون معنا) -->
+    <section class="card">
+      <h2>💡 فكرة الاستثمار</h2>
+      <ul>
+        <li>العمل بنظام تداول منضبط ومدروس.</li>
+        <li>أرباح شهرية مجزية مع تحكم كامل بالمخاطر.</li>
+        <li>نفس الأداء يُطبق على جميع المحافظ مع اختلاف حجم اللوت حسب رأس المال.</li>
+      </ul>
+      <div class="callout">
+        <b>📌 ملاحظة هامة:</b><br>
+        أقل محفظة للبـدء الفعلي: <b style="color:#FFD700;">2000 دولار</b>.<br>
+        محفظة 100 دولار: للمتابعة والمشاهدة فقط بهدف اختبار الأداء دون مخاطرة حقيقية.<br>
+        📱 واتساب: <a href="https://wa.me/201064680034" target="_blank" style="color:#25D366;text-decoration:none;font-weight:700">00201064680034</a>
+      </div>
+    </section>
+
     <!-- لماذا تكون معنا -->
     <section class="card">
       <h2>❓ لماذا تكون معنا؟</h2>
       <ul>
-        <li>لا تحتاج للمتابعة اليومية المرهِقة—عِش حياتك وركّز في عملك، ودَع الحساب يعمل.</li>
-        <li>بنهاية الشهر ستجد مبلغًا مُحترمًا يمكنك الاستفادة منه والشعور ببركته بإذن الله.</li>
+        <li>لا تحتاج للمتابعة اليومية المرهِقة — عِش حياتك وركّز في عملك، ودَع الحساب يعمل.</li>
+        <li>بنهاية الشهر ستجد مبلغًا محترمًا يمكنك الاستفادة منه والشعور ببركته بإذن الله.</li>
       </ul>
     </section>
 
-    <!-- صورة العوائد الشهرية بين القسمين -->
-    <div>
-      <h2 class="section-title">العوائد الشهرية</h2>
-      <img class="divider-img" src="images/income_chart.jpg" alt="العوائد الشهرية">
-    </div>
+    <!-- العوائد الشهرية (المساحة المحددة بين القسمين) -->
+    <h2 class="section-title">العوائد الشهرية</h2>
+    <img class="divider-img" src="images/income_chart.jpg" alt="العوائد الشهرية">
 
     <!-- حساب المشاهدة -->
     <section class="card">
       <h2>📊 بيانات حساب المشاهدة (سِنت أمريكي)</h2>
       <p class="muted">يمكنك إرفاق لقطة شاشة لمنصة MT5 بدل الصورة الافتراضية.</p>
       <a class="watch-link" href="#" title="MT5 Watch">
-        <img src="images/ex-logo.jpg" alt="Exness">
-        MT5 Watch
+        <img src="images/ex-logo.jpg" alt="Exness"> MT5 Watch
       </a>
       <pre>
 Account Number: 157276506
@@ -84,16 +101,14 @@ Server:         Exness-MT5Real19
       </pre>
     </section>
 
-    <!-- طريقة الحساب محدثة إلى 2000$ -->
+    <!-- طريقة الحساب (2000$) -->
     <section class="card">
       <h2>📈 كيف أحسب دخلي إذا بدأت بـ <span style="color:#ffe082">2000 دولار</span>؟</h2>
       <p>تابع أرباح حساب المشاهدة، واضرب الربح في نسبة الفرق بين المحفظتين.</p>
-
       <div class="card" style="background:#0d1a2b;border-color:var(--border)">
         <b>🔹 مثال:</b><br>
-        لو حساب الـ 100 دولار ربح <b>$3</b> في يوم معيّن، فإن محفظة الـ <b>2000$</b> ستحقق تقريباً <b>$60</b>.<br>
-        <b>المعادلة:</b>
-        <span style="color:#7dd3fc">2000 ÷ 100 = 20 → 20 × 3 = 60</span><br>
+        لو حساب الـ 100 دولار ربح <b>$3</b> في يوم معيّن، فإن محفظة الـ <b>2000$</b> ستحقق تقريبًا <b>$60</b>.<br>
+        <b>المعادلة:</b> <span style="color:#7dd3fc">2000 ÷ 100 = 20 → 20 × 3 = 60</span><br>
         نفس النظام، نفس الأداء، والفرق فقط في <b>حجم اللوت</b>.
       </div>
     </section>
