--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <div class="callout">
         <b>📌 ملاحظة هامة:</b><br>
         أقل محفظة للبـدء الفعلي: <b style="color:#FFD700;">2000 دولار</b>.<br>
-        محفظة 100 دولار: للمتابعة والمشاهدة فقط بهدف اختبار الأداء دون مخاطرة حقيقية.<br>
+        محفظة 100 دولار: للمتابعة والمشاهدة فقط بهدف اختبار الأداء <b>وإدارة المخاطر</b>.<br>
         📱 واتساب: <a href="https://wa.me/201064680034" target="_blank" style="color:#25D366;text-decoration:none;font-weight:700">00201064680034</a>
       </div>
     </section>
