--- a/index.html
+++ b/index.html
@@ -17,10 +17,22 @@
     body{margin:0;background:linear-gradient(180deg,var(--bg1),var(--bg2));color:var(--text);font-family:"Tajawal","Segoe UI",system-ui,Arial,sans-serif}
     a{color:#9bd1ff}
     .wrap{max-width:1050px;margin:auto;padding:22px}
-    .title{margin:34px 12px 10px;font-size:clamp(28px,4.6vw,44px);color:var(--accent);text-align:center}
+
+    /* العنوان */
+    .title{margin:34px 12px 14px;font-size:clamp(28px,4.6vw,44px);color:var(--accent);text-align:center}
     .brand{text-transform:uppercase;letter-spacing:.6px}
-    .logo{display:block;margin:10px auto 10px;max-width:280px;width:100%;height:auto;border-radius:14px;box-shadow:0 10px 30px rgba(0,0,0,.4)}
-    .intro-text{font-size:1.6rem;font-weight:700;color:#ffcc00;text-align:center;margin:8px 0 6px;text-shadow:1px 1px 3px rgba(0,0,0,.4)}
+
+    /* شريط الصور العلوي */
+    .hero-logos{display:flex;justify-content:center;align-items:center;gap:22px;flex-wrap:wrap;margin:8px 0 6px}
+    .hero-logos img{width:260px;max-width:30vw;height:auto;border-radius:12px;box-shadow:0 8px 24px rgba(0,0,0,.4);background:#0b1626;border:1px solid #1f2f45;object-fit:cover}
+    @media (max-width:820px){
+      .hero-logos img{max-width:44vw}
+    }
+    @media (max-width:540px){
+      .hero-logos img{max-width:88vw}
+    }
+
+    .intro-text{font-size:1.6rem;font-weight:700;color:#ffcc00;text-align:center;margin:10px 0 6px;text-shadow:1px 1px 3px rgba(0,0,0,.4)}
     .btn{display:inline-block;margin:16px auto 6px;padding:14px 26px;border-radius:28px;background:var(--cta);color:#fff;font-weight:700;border:none;cursor:pointer}
     .btn:hover{background:var(--cta2)}
     .popup{display:none;position:fixed;bottom:80px;right:20px;background:rgba(0,0,0,.9);padding:18px;border-radius:12px;width:min(92vw,280px);text-align:center;z-index:50}
@@ -41,17 +53,29 @@
     .divider-img{display:block;margin:6px auto 20px;max-width:95%;border-radius:12px;box-shadow:0 4px 12px rgba(0,0,0,.45)}
 
     footer{margin:26px 0 16px;color:#99a7b6;font-size:13px;text-align:center}
+
+    /* بطاقة الحاسبة */
+    .calc-card{margin-top:20px;padding:20px;border-radius:12px;background:linear-gradient(145deg,#071322,#0e1b2b);box-shadow:0 0 12px rgba(0,0,0,0.3);text-align:center}
   </style>
 </head>
 <body>
   <div class="wrap">
     <!-- HERO -->
     <h1 class="title">مرحبًا بك في موقع <span class="brand">TREND KING</span></h1>
-    <img class="logo" src="images/TREND KING.jpg" alt="TREND KING Logo">
+
+    <!-- الصفّ العلوي: LEFT - LOGO - RIGHT -->
+    <div class="hero-logos">
+      <img src="images/LEFT.jpg" alt="LEFT">
+      <img src="images/TREND KING.jpg" alt="TREND KING Logo">
+      <img src="images/RIGHT.jpg" alt="RIGHT">
+    </div>
+
     <p class="intro-text">انطلاقة احترافية مع نظام تداول منضبط — عوائد مستهدفة من 30% إلى 40% شهريًا ومخاطرة لا تتجاوز 10%.</p>
 
     <!-- تواصل -->
-    <button class="btn" onclick="togglePopup()">تواصل معنا</button>
+    <div style="text-align:center">
+      <button class="btn" onclick="togglePopup()">تواصل معنا</button>
+    </div>
     <div id="popup" class="popup">
       <a class="tiktok"   target="_blank" href="https://www.tiktok.com/@trendking07"><i class="fab fa-tiktok"></i> TikTok</a>
       <a class="whatsapp" target="_blank" href="https://wa.me/201064680034"><i class="fab fa-whatsapp"></i> WhatsApp</a>
@@ -75,7 +99,7 @@
     </section>
 
     <!-- الحاسبة (36.67% شهريًا / 21 يوم) -->
-    <section class="card" style="margin-top:20px; padding:20px; border-radius:12px; background:linear-gradient(145deg,#071322,#0e1b2b); box-shadow:0 0 12px rgba(0,0,0,0.3); text-align:center;">
+    <section class="card calc-card">
       <h2 style="color:#FFD700; margin-bottom:12px;">📊 احسب عائدك اليومي والشهري (بالدولار)</h2>
 
       <div style="display:flex; gap:12px; justify-content:center; flex-wrap:wrap; align-items:center; margin-bottom:12px;">
