--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta property="og:title" content="TREND KING" />
   <meta property="og:description" content="نظام تداول منضبط وعوائد مستهدفة مع إدارة مخاطر." />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="images/TREND-KING.jpg" />
+  <meta property="og:image" content="images/TREND KING.jpg" />
   <meta property="og:locale" content="ar_AR" />
   <link rel="icon" href="images/favicon.ico" />
 
@@ -78,8 +78,8 @@
     <!-- الصفّ العلوي: LEFT - LOGO - RIGHT -->
     <div class="hero-logos">
       <img src="images/LEFT.jpg" alt="صورة يسار" loading="lazy" decoding="async" width="520" height="320">
-      <!-- تأكد من إعادة تسمية الملف إلى TREND-KING.jpg بلا مسافات -->
-      <img src="images/TREND-KING.jpg" alt="شعار TREND KING" loading="lazy" decoding="async" width="520" height="320">
+      <!-- استخدام نفس اسم الملف الحالي بالمسافة لضمان الظهور -->
+      <img src="images/TREND KING.jpg" alt="شعار TREND KING" loading="lazy" decoding="async" width="520" height="320">
       <img src="images/RIGHT.jpg" alt="صورة يمين" loading="lazy" decoding="async" width="520" height="320">
     </div>
 
@@ -128,10 +128,7 @@
           النسبة اليومية ≈ 1.746%
         </span>
       </div>
-      <button onclick="calcAuto()"
-              class="btn" style="background:#FFD700;color:#000">
-        احسب الآن
-      </button>
+      <button onclick="calcAuto()" class="btn" style="background:#FFD700;color:#000">احسب الآن</button>
       <p id="calcMsg" style="margin-top:15px; font-weight:700; font-size:16px;"></p>
       <small style="color:#9bb3c9; display:block; margin-top:8px;">
         * الحد الأدنى للاستثمار: 1500$ — النسبة الشهرية المفترضة: 36.67% خلال 21 يوم تداول (≈ <span id="dailyPctText">1.746%</span> يوميًا)
@@ -154,13 +151,17 @@
     <h2 class="section-title">العوائد الشهرية</h2>
     <img class="divider-img" src="images/income_chart.jpg" alt="مخطط العوائد الشهرية" loading="lazy" decoding="async" width="900" height="420">
 
-    <!-- حساب المشاهدة (بدون إظهار بيانات حساسة) -->
+    <!-- حساب المشاهدة (إرجاع البيانات كما كانت) -->
     <section class="card">
-      <h2>📊 بيانات حساب المشاهدة</h2>
-      <p style="margin:0 0 10px">للحصول على بيانات المشاهدة (قراءة فقط):</p>
-      <a class="watch-link" href="https://wa.me/201064680034?text=%D8%A3%D8%B1%D8%BA%D8%A8%20%D9%81%D9%8A%20%D8%A8%D9%8A%D8%A7%D9%86%D8%A7%D8%AA%20%D8%AD%D8%B3%D8%A7%D8%A8%20%D8%A7%D9%84%D9%85%D8%B4%D8%A7%D9%87%D8%AF%D8%A9" target="_blank" title="طلب بيانات المشاهدة">
-        <img src="images/ex-logo.jpg" alt="Exness"> <span>اطلب البيانات عبر واتساب <i class="fa-solid fa-lock"></i></span>
+      <h2>📊 بيانات حساب المشاهدة (سِنت أمريكي)</h2>
+      <a class="watch-link" href="#" title="MT5 Watch">
+        <img src="images/ex-logo.jpg" alt="Exness"> MT5 Watch
       </a>
+      <pre>
+Account Number: 157276506
+Password:       You@1212
+Server:         Exness-MT5Real19
+      </pre>
     </section>
 
     <!-- طريقة الحساب (مثال 2000$) -->
