--- a/index.html
+++ b/index.html
@@ -272,7 +272,11 @@ Server:         Exness-MT5Real19
       <h2>❓ أسئلة شائعة</h2>
       <details><summary>هل الأرباح مضمونة؟</summary><p>لا، الأداء السابق أو المستهدف لا يضمن نتائج مستقبلية والتداول ينطوي على مخاطرة.</p></details>
       <details><summary>ما الحد الأدنى؟</summary><p>1500$ للبدء الفعلي. حساب 100$ للمشاهدة فقط.</p></details>
-      <details><summary>هل أستطيع السحب في أي وقت؟</summary><p>نعم، مع الالتزام بقواعد إدارة المخاطر والمدة المعلنة.</p></details>
+      <details>
+  <summary>هل أستطيع السحب في أي وقت؟</summary>
+  <p>نعم، التحكم عندك في السحب والإيداع.</p>
+</details>
+
     </section>
 
     <footer>© 2025 — <span class="brand">TREND KING</span> • إدارة مخاطر منضبطة • عوائد مستهدفة 30%–40%</footer>
