--- a/index.html
+++ b/index.html
@@ -62,8 +62,10 @@
     .callout-info{border-inline-start:4px solid var(--info);background:var(--infobg);border-radius:10px;padding:12px 14px;margin-top:12px}
 
     pre{background:#0a1422;border:1px solid var(--border);border-radius:12px;padding:14px;color:#d1e7ff;direction:ltr;text-align:left;overflow:auto}
-    .watch-link{display:inline-flex;align-items:center;gap:8px;background:#0b1626;border:1px solid var(--border);padding:8px 12px;border-radius:10px;color:#9bd1ff;font-weight:700}
-    .watch-link img{width:22px;height:22px;border-radius:4px;vertical-align:middle}
+
+    /* رابط المتابعة (مع الشعار الصغير) */
+    .watch-link{display:inline-flex;align-items:center;gap:10px;background:#0b1626;border:1px solid var(--border);padding:8px 12px;border-radius:10px;color:#9bd1ff;font-weight:700}
+    .watch-link img{width:24px;height:24px;border-radius:4px;vertical-align:middle}
 
     .section-title{color:#FFD700;font-size:24px;text-align:center;margin:14px 0 10px}
     .divider-img{display:block;margin:6px auto 20px;max-width:95%;border-radius:12px;box-shadow:0 4px 12px rgba(0,0,0,.45)}
@@ -160,10 +162,15 @@
 
     <!-- حساب المشاهدة -->
     <section class="card">
-      <h2>📊 بيانات حساب المشاهدة (سِنت أمريكي)</h2>
-      <a class="watch-link" href="#" title="MT5 Watch">
-        <img src="images/ex-logo.jpg" alt="Exness"> MT5 Watch
-      </a>
+      <!-- العنوان الجديد مع الرابط -->
+      <h2>
+        للمُتابعة وتقييم الأداء — 
+        <a class="watch-link" href="ضع_الرابط_هنا" target="_blank" rel="noopener">
+          <img src="images/MYFXBOOK.jpg" alt="Myfxbook"> اضغط هنا
+        </a>
+      </h2>
+
+      <!-- بيانات حساب المشاهدة تبقى كما هي -->
       <pre>
 Account Number: 157276506
 Password:       You@1212
